docs: restructure compatibility-guard openspec docs
- Move detailed collection fields/specs into change design doc

- Keep spec.md as lightweight capability-level overview

- Add HTTPS inbound/outbound subject coverage

- Align inventory + handshake probe two-layer approach

Co-Authored-By: Claude <noreply@anthropic.com>